2000-07-20  Harlan Stenn  <stenn@whimsy.udel.edu>

	* configure.in: 4.0.99k

2000-07-19  Harlan Stenn  <stenn@whimsy.udel.edu>

	* ntpd/ntp_proto.c (peer_xmit): PUBKEY cleanup

2000-07-18  Harlan Stenn  <stenn@whimsy.udel.edu>

	* configure.in: 4.0.99j5

	* html/ntpd.htm (HREF): Document other missing command-line options

	* html/ntpd.htm (HREF): Document
	* html/confopt.htm (href): Undocument
	* ntpd/ntp_config.c (getconfig): -N high for high-priority.
	Lose the ntp.conf way of setting priority.
	
	* ntpd/ntp_crypto.c: PUBKEY/AUTOKEY cleanup
	From Dave Mills

2000-07-17  Harlan Stenn  <stenn@whimsy.udel.edu>

	* html/confopt.htm (href): Document it.
	* ntpd/ntp_config.c (getconfig): CONFIG_PRIORITY support
	* ntpd/ntpd.c (set_process_priority): Use it.

	* ntpd/ntp_crypto.c: Crypto key stuff
	* ntpd/ntp_proto.c: pubkey -> pubkey.ptr
	* ntpd/ntp_control.c (ctl_putpeer): fstamp -> pubkey.fstamp
	* ntpd/ntp_peer.c: 
	* include/ntpd.h: 
	* include/ntp_types.h: 
	* include/ntp_request.h: 
	* include/ntp_crypto.h: 
	* include/ntp_control.h: 
	* include/ntp.h: Type cleanup
	From: Dave Mills

2000-07-14  Harlan Stenn  <stenn@whimsy.udel.edu>

	* ElectricFence/Makefile.am (check-local): Don't run the tests if
	we didn't build the programs...
	(check-local): Same, but watch the return codes...

	* ElectricFence/page.c: #include config.h if it's there.
	Properly handle the sys_errlist declaration.

	* html/ntpq.htm: 
	* html/index.htm: 
	* html/debug.htm: 
	* html/authopt.htm: 
	Reality check.
	From Dave Mills

2000-07-13  Harlan Stenn  <stenn@whimsy.udel.edu>

	* Makefile.am (SUBDIRS): Added ElectricFence
	* configure.in (AC_CONFIG_FILES): Added ElectricFence support
	* ElectricFence: Imporpted.

2000-07-12  Harlan Stenn  <stenn@whimsy.udel.edu>

	* util/ntp_genkeys.c (main): Cleanup
	* ntpd/refclock_wwv.c (wwv_qrz): sqrt -> SQRT
	* ntpd/refclock_chu.c (chu_rf): sqrt -> SQRT
	* ntpd/ntpd.c (set_process_priority): Disable  high-priority for now.
	PUBKEY cleanup.