@@ -1,3 +1,4 @@
-noinst_SCRIPTS = calc_tickadj checktime freq_adj mkver ntp-wait ntpsweep ntpver plot_summary summary
+bin_SCRIPTS = ntp-wait
+noinst_SCRIPTS = calc_tickadj checktime freq_adj mkver ntpsweep ntpver plot_summary summary
 EXTRA_DIST = fixautomakedepsmagic hpadjtime.sh monitoring ntp-groper \
 	ntp-restart ntp-status rc1 rc2 stats support
