@@ -1,5 +1,7 @@
 2000-07-20  Harlan Stenn  <stenn@whimsy.udel.edu>
 
+	* scripts/Makefile.am (bin_SCRIPTS): Install ntp-wait
+
 	* configure.in: 4.0.99k
 
 2000-07-19  Harlan Stenn  <stenn@whimsy.udel.edu>
